# Quake_Talk

./: .env.example  .gitattributes  .gitignore  README.md  Read Me.md  app.py  demo.py  pyproject.toml  requirements.txt  test_app_pipeline.py
Quake_Talk/: .env.example  README.md  requirements.txt
Quake_Talk/artifacts/: tweet_embeddings.npy  tweets.index  tweets_cleaned.parquet
Quake_Talk/data/: tweets.csv  tweets_english.csv
Quake_Talk/quake_talk/: gpt.py
Quake_Talk/scripts/: build_embeddings.py
quake_talk/: __init__.py  gpt.py  search.py
quake_talk/preprocessing/: clean_text.py
scripts/: build_index.py  clean_dataset.py
tests/: test_clean_text.py
